--- a/phoneproject/templates/category.html
+++ b/phoneproject/templates/category.html
@@ -3,37 +3,56 @@
 {% load static %}
 
 {% block body%}
- <div class="div1 ">     <!-- -->
+{% if user.is_authenticated %}
+    <p>Welcome, {{ user.username }}!</p>
+    <!-- Add other content for authenticated users -->
+{% else %}
+    <!-- Add content for non-authenticated users -->
+{% endif %}
+ <div class="div1 ">     
   <h1 class="hd1">BIGGEST DEALS ON SUMMER</h1>
 </div>
-<div class="container-fluid ">
-    {% if category %} 
-    <h1 class="hd3">{{category.name}}</h1>
-    <img src="{{category.banner.url}}" class=" img1 w-100 " height="650px" >
-    {% else %}
-      {% include 'slide.html' %}
-    {% endif %}
-    <h1 class=" hd2 justify-content-center d-flex">Explore The Summer</h1>
-   <div class="bg-success p-2 text-dark bg-opacity-25">
-        <div class="container ">
+<div class="container p-0 m-auto">
+  {% if category %} 
+  <h1 class="hd3">{{category.name}}</h1>
+  <img src="{{category.banner.url}}" class=" img1 w-100 " height="650px" >
+  {% else %}
+  {% include 'slide.html' %}
+  {% endif %}
+</div>
+<h1 class=" hd2 justify-content-center d-flex">Explore The Summer</h1>
+<div class="container ">
+<div class=" p-2 text-dark ">
             <div class="row">
               
-                {% for i in product_list %}
+                {% for i in product %}
                 <div class="col-lg-3 col-md-4 col-sm-6 my-3">
            
-                   <div class="card" style="width: 16rem;">
-                       <img src="{{ i.image.url }}" class="card-img-top w-100" height="254px" alt="...">
-                       <div class="card-body">
-                         <h5 class="card-title">{{i.name}}</h5>
-                         <h3 class="card-text"><i class="bi bi-currency-rupee"></i>{{i.price}}</h3>
-                         <a href="{% url 'shop:details' i.id %}" class="btn btn-primary">More details</a>
-                       </div>
-                     </div>
-                </div>
+                  <div class="card" style="width: 16rem;">
+                      <img src="{{ i.image.url }}" class=" w-100" height="254px" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">{{i.name}}</h5>
+                        <h3 class="card-text"><i class="bi bi-currency-rupee"></i>{{i.price}}</h3>
+                        <a href="{% url 'shop:details' i.id %}" class="btn btn-primary">More details</a>
+                      </div>
+                    </div>
+               </div>
                 {% endfor %}
+                
+                <!-- paginator -->
+                <div class="container px-3">
+                  <hr>
+                  {%  if product.paginator.num_pages > 1 %}
+                  <div class="text-center">
+                    {% for i in product.paginator.page_range %}
+                      <a href="?page={{i}}" class="btn btn-primary btn-sm {% if product.number == i %}active {% endif %}">{{i}}</a>
+                    {% endfor %}
+                  </div>
+                  {% endif %}
+                </div>
             </div>
-        </div>
-      </div>
-</div>
+          </div>
+          </div>
+
 
 {% endblock %}
