--- a/phoneproject/templates/category.html
+++ b/phoneproject/templates/category.html
@@ -3,19 +3,16 @@
 {% load static %}
 
 {% block body%}
-{% if user.is_authenticated %}
-    <p>Welcome, {{ user.username }}!</p>
-    <!-- Add other content for authenticated users -->
-{% else %}
-    <!-- Add content for non-authenticated users -->
-{% endif %}
+
  <div class="div1 ">     
   <h1 class="hd1">BIGGEST DEALS ON SUMMER</h1>
 </div>
 <div class="container p-0 m-auto">
   {% if category %} 
   <h1 class="hd3">{{category.name}}</h1>
+  <div class="div_c2">
   <img src="{{category.banner.url}}" class=" img1 w-100 " height="650px" >
+  </div>
   {% else %}
   {% include 'slide.html' %}
   {% endif %}
